--- a/README
+++ b/README
@@ -1,1 +1,6 @@
+Authors:
+Connor O'Leary,
+Travis Stone,
+and Joe Pagani
 
+This is an application for the android. This app is a fighting game which will allow the player to fight either other people or the computer. The basis of this game is to connect to other players via local bluetooth and fight them with your own character. You will have the ability to select a certain character with a unique class and be able to upgrade, or level up, your character with experience points. In order to keep the game balanced and enjoyable for everyone, XP can be obtained by defeating enemies in the player versus computer component and by partaking in the player versus player. In addition to the player versus player aspect of XP, to keep things fair we decided that the outcome of the PVP match should only determine how much XP gets dished out to each player instead of giving it all to the victor. This will also depend on your level or ranking, for example if you have a high rank you will receive less XP for fighting a lower level player and your XP will reduce as you fight lower ranked players, the inverse of this is also true, meaning that if a lower ranked player defeats a higher ranked play you receive more XP. However, losing a match gives you a static XP amount and it is only given with PVP, you won't get XP for losing against the computer, the computer is only there to help you level up and customize your character. All of these aspects are put into place to keep the users continually interested in the game.
